# recommendation_agent

./: .gitignore  LICENSE  README.md  api.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
agent/: graph.py  system_prompt.py  tools.py
agent_logic/: agent.py  config.py  tools.py
frontend/: index.html
futedu_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_agent.py  test_offline_logic.py
